--- a/Bootstrap_Website/site.html
+++ b/Bootstrap_Website/site.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="siteStyle.css">
     <title>Hello, world!</title>
   </head>
 
@@ -25,15 +25,15 @@
               <a class="nav-link active" aria-current="page" href="#">Home22</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Valikko</a>
+              <a class="nav-link" href="#">Linkkiin</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Näin
+                näin
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Eka</a></li>
-                <li><a class="dropdown-item" href="#">Toka</a></li>
+                <li><a class="dropdown-item" href="#">irja</a></li>
+                <li><a class="dropdown-item" href="#">liisa</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">jes</a></li>
               </ul>
