--- a/Bootstrap_Website_UUSI/index.html
+++ b/Bootstrap_Website_UUSI/index.html
@@ -18,6 +18,9 @@
                 <h1>Welcome to the Landing Page!</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis. Suspendisse consectetur mi id libero fringilla, in pharetra sem ullamcorper.</p>
                 <button class="btn btn-outline-secondary btn-lg">Tell Me More!</button>
+                
+                <a href="second.html" button class="btn btn-outline-secondary btn-lg">Second page</a>
+
 
                 <div class="container features">
                     <div class="row">
