--- a/Bootstrap_Website_UUSI/index.html
+++ b/Bootstrap_Website_UUSI/index.html
@@ -9,18 +9,35 @@
     <title>Webpage</title>
   </head>
 
+  <nav class="navbar navbar-expand-md"></nav>
+  <a href="index.html" class="nav-link" href="#" button class=""><h1>Suomi</h1></a>
+  <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
+      <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="main-navigation">
+      <ul class="navbar-nav">
+          <li class="nav-item">
+            <a href="Oulu.html" class="nav-link" href="#" button class="">Oulu</a>
+          </li>
+          <li class="nav-item">
+            <a href="Kuopio.html" class="nav-link" href="#" button class="">Kuopio</a>
+        </li>
+          <li class="nav-item">
+            <a href="Rovaniemi.html" class="nav-link" href="#" button class="">Rovaniemi</a>
+        </li>
+      </ul>
+  </div>
+  </nav>
+  
   <body>
-
-    <nav class="navbar navbar-expand-md">
         <header class="page-header header container-fluid">
             <div class="overlay"></div>
             <div class="description">
-                <h1>Welcome to the Landing Page!</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis. Suspendisse consectetur mi id libero fringilla, in pharetra sem ullamcorper.</p>
-                <button class="btn btn-outline-secondary btn-lg">Tell Me More!</button>
+                <h1>Tervetuloa!</h1>
+                <p>Suomi</p>
+                <button class="btn btn-outline-secondary btn-lg">Kerro lisää!</button>
                 
-                <a href="second.html" button class="btn btn-outline-secondary btn-lg">Second page</a>
-
+                <a href="second.html" button class="btn btn-outline-secondary btn-lg">Toinen sivu</a>
 
                 <div class="container features">
                     <div class="row">
@@ -43,25 +60,6 @@
                 </div>
             </div>
         </header>
-        <a class="navbar-brand" href="#">Logo</a>
-        <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="main-navigation">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
