--- a/Bootstrap_Website_UUSI/second.html
+++ b/Bootstrap_Website_UUSI/second.html
@@ -7,6 +7,25 @@
     <title>Document</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-md"></nav>
+    <a class="navbar-brand" href="#">Logo</a>
+    <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="main-navigation">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Etusivu</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+            </li>
+        </ul>
+    </div>
+    </nav>
     <h1>Second page</h1>
     <a href="index.html">First page</a>
 
