--- a/Javascript_oppimistehtävä/index.html
+++ b/Javascript_oppimistehtävä/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web-sivusto</title>
     <script src=code.js></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="banner"></div>
 </body>
 </html>
