--- a/Javascript_oppimistehtävä/index.html
+++ b/Javascript_oppimistehtävä/index.html
@@ -5,10 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web-sivusto</title>
-    <script src=code.js></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="banner"></div>
+    <div class="banner">
+        <div class="navbar">
+            <img src="Pictures/logo.png" class="logo"> <!-- Lähde: https://pixabay.com/fi/vectors/puu-el%c3%a4m%c3%a4n-puu-runko-hengellinen-5334823/ -->
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+        <div class="content">
+            <h1>OUR WEBPAGE</h1>
+            <p>Our company takes care of Our World. <br> Take your part in this project to bring forth a more enduring future for our planet.</p>
+            <div>
+                <button type="button"><span></span>MEMBERSHIP</button>
+                <button type="button"><span></span>DONATE</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
