Oulu-sivulle vielä tekstiä

--- a/Bootstrap_Website_UUSI/Oulu.html
+++ b/Bootstrap_Website_UUSI/Oulu.html
@@ -10,6 +10,8 @@
 </head>
 
 <nav class="navbar navbar-expand-md"></nav>
+
+<!-- Logo (klikkaamalla etusivulle) -->
 <a href="index.html" class="nav-link" href="#" button class="">
   <h1>
   <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-moon-stars-fill" viewBox="0 0 16 16">
@@ -19,6 +21,7 @@
   </h1>
 </a>
 
+<!-- Navbar pudotusvalikon nappi -->
 <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#main-navigation">
     <span class="navbar-toggler-icon"></span>
 </button>
@@ -34,12 +37,10 @@
     </li>
   </ul>
 </div>
+</nav>
 
 <body>
-  <header class="header">
-
-  </header>
-    
+  <header class="header"></header>
 <!-- Accordion -->
 <div class="accordion" id="accordionExample">
     <div class="accordion-item">
@@ -78,26 +79,6 @@
       </h2>
       <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
         <div class="accordion-body">
-          
-        </div>
-      </div>
-    </div>
-  </div>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
         </div>
       </div>
     </div>
