--- a/Bootstrap_Website_UUSI/index.html
+++ b/Bootstrap_Website_UUSI/index.html
@@ -22,7 +22,6 @@
     </h1>
   </a>
 
-
   <!-- Navbar pudotusvalikon nappi -->
   <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
       <span class="navbar-toggler-icon"></span>
@@ -39,37 +38,36 @@
         </li>
       </ul>
   </div>
-  
-  <body>
-    <header class="header">
-      <div class="overlay"></div>
-      <div class="description">
-        <h1 class="welcome">Tervetuloa!</h1>
-          <p>Tältä sivulta löydät tietoa Pohjois-Pohjanmaan sekä Pohjois-Savon maakuntakeskuksista, Oulusta ja Kuopiosta.</p>
-  <!-- 'Kerro lisää' -nappi -->
-    <p>
-      <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthBar" aria-expanded="false" aria-controls="collapseWidthBar">
-        Kerro lisää!
-      </button>
-    </p>
-    <br>
-  <!-- Placeholder -->  
-      <div style="min-height: 120px;">
-        <div class="collapse collapse-horizontal" id="collapseWidthBar">
-          <div class="card card-body" style="width: 1300px;">
-            Löydät sivun yläreunasta valikon, josta näet molempien kaupunkien sivut.
-          </div>
+<!-- Tervetuloa -teksti -->
+<body>
+  <header class="header">
+    <div class="overlay"></div>
+    <div class="description">
+      <h1 class="welcome">Tervetuloa!</h1>
+        <p>Tältä sivulta löydät tietoa Pohjois-Pohjanmaan sekä Pohjois-Savon maakuntakeskuksista, Oulusta ja Kuopiosta.</p>
+<!-- 'Kerro lisää' -nappi -->
+  <p>
+    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthBar" aria-expanded="false" aria-controls="collapseWidthBar">
+      Kerro lisää!
+    </button>
+  </p>
+  <br>
+<!-- Placeholder -->  
+    <div style="min-height: 120px;">
+      <div class="collapse collapse-horizontal" id="collapseWidthBar">
+        <div class="card card-body" style="width: 1300px;">
+          Löydät sivun yläreunasta valikon, josta näet molempien kaupunkien sivut.
         </div>
       </div>
-
-<!--Kaupunkien nimet ja niiden kuvat-->       
+    </div>
+<!-- Kaupunkien nimet ja niiden kuvat -->       
   <div class="container features">
   <div class="row">
   <div class="col-lg-6 col-md-4 col-sm-12">
       <h3 class="feature-title">Oulu</h3>
       <img src="images/column-1.jpg" class="img-fluid">
       <p>"Capital of Northern Scandinavia"</p></div>
-                        
+
       <div class="col-lg-6 col-md-4 col-sm-12">
       <h3 class="feature-title">Kuopio</h3>
       <img src="images/column-2.jpg" class="img-fluid">
