--- a/Bootstrap_Website_UUSI/Oulu.html
+++ b/Bootstrap_Website_UUSI/Oulu.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oulu</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="Oulu.css">
+    <title>Oulu</title>
 </head>
 
 <nav class="navbar navbar-expand-md"></nav>
@@ -39,8 +39,23 @@
 </div>
 </nav>
 
-<body>
-  <header class="header"></header>
+<body class="body">
+  <header class="header">
+
+
+<div class="container features">
+  <div class="row">
+  <div class="col-lg-6 col-md-4 col-sm-12">
+      <h3 class="feature-title">Rotuaari</h3>
+      <img src="images/oulu-page-picture1.jpg" class="img-fluid">    <!-- Lähde: https://commons.wikimedia.org/wiki/File:Kirkkokatu_Oulu_20121206_01.JPG -->
+      <p>Rotuaari</p></div>
+
+      <div class="col-lg-6 col-md-4 col-sm-12">
+      <h3 class="feature-title">Oulun tuomiokirkko</h3>
+      <img src="images/oulu-page-picture2.jpg" class="img-fluid">     <!-- Lähde: https://commons.wikimedia.org/wiki/File:Oulu_Cathedral_2020-07-03.jpg -->
+      <p>Oulun tuomiokirkko</p></div>
+
+
 <!-- Accordion -->
 <div class="accordion" id="accordionExample">
     <div class="accordion-item">
@@ -84,6 +99,18 @@
     </div>
   </div>
 
+ 
+</header>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+  <script src="main.js"></script>
 </body>
+
+<footer class="page-footer">
+  <div class="footerText">
+    <p>Liisa Pikkarainen</p>
+  </div>
+</footer>
 </html>
