--- a/Bootstrap_Website_UUSI/Oulu.html
+++ b/Bootstrap_Website_UUSI/Oulu.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="Oulu.css">
-    <title>Oulu</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="Oulu.css">
+  <title>Oulu</title>
 </head>
 
 <nav class="navbar navbar-expand-md"></nav>
@@ -40,77 +40,61 @@
 </nav>
 
 <body class="body">
-  <header class="header">
-
-
+<header class="header">
 <div class="container features">
   <div class="row">
   <div class="col-lg-6 col-md-4 col-sm-12">
-      <h3 class="feature-title">Rotuaari</h3>
-      <img src="images/oulu-page-picture1.jpg" class="img-fluid">    <!-- Lähde: https://commons.wikimedia.org/wiki/File:Kirkkokatu_Oulu_20121206_01.JPG -->
-      <p>Rotuaari</p></div>
+    <h3 class="feature-title">Rotuaari</h3>
+    <img src="images/oulu-page-picture1.jpg" class="img-fluid">    <!-- Lähde: https://commons.wikimedia.org/wiki/File:Kirkkokatu_Oulu_20121206_01.JPG -->
+    <p>Rotuaari</p></div>
 
-      <div class="col-lg-6 col-md-4 col-sm-12">
-      <h3 class="feature-title">Oulun tuomiokirkko</h3>
-      <img src="images/oulu-page-picture2.jpg" class="img-fluid">     <!-- Lähde: https://commons.wikimedia.org/wiki/File:Oulu_Cathedral_2020-07-03.jpg -->
-      <p>Oulun tuomiokirkko</p></div>
-
+    <div class="col-lg-6 col-md-4 col-sm-12">
+    <h3 class="feature-title">Oulun tuomiokirkko</h3>
+    <img src="images/oulu-page-picture2.jpg" class="img-fluid">     <!-- Lähde: https://commons.wikimedia.org/wiki/File:Oulu_Cathedral_2020-07-03.jpg -->
+    <p>Oulun tuomiokirkko</p>
+  </div>
 
 <!-- Accordion -->
 <div class="accordion" id="accordionExample">
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="headingOne">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          <strong>Oulun historia</strong>
-        </button>
-      </h2>
-      <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-          Ruotsin kuninkaan Kaarle IX:n vuonna 1605 perustama Oulu on Pohjois-Suomen vanhin kaupunki. Oulun suosio alkoi kasvaa jo 1760-luvulla, kun kaupunki sai tapulikaupunkioikeudet, jotka mahdollistivat 
-          ulkomaankaupan.<br>
-          Oulu tunnettiin pitkään tervakaupunkina: 1800-luvulla Oulu oli koko vuosisadan suurin tervanviejä Suomessa.<br>
-          Oulu tunnetaan nykypäivänä teknologiakaupunkina. Vuonna 1982 Ouluun perustettiin Pohjoismaiden ensimmäinen teknologiakylä, Technopolis.
-        </div> <!-- Lähde: https://fi.wikipedia.org/wiki/Oulu -->
-      </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="headingTwo">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          <strong>Oulu opiskelijakaupunkina</strong>
-        </button>
-      </h2>
-      <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-          Oulussa on reilusti tekemistä tarjolla opiskelijoille. Oulu on myös Suomen edullisin opiskelija-asumisen kannalta. Oulun korkeakoululiikunta tarjoaa erilaisia kursseja ja esimerkiksi palloilu- ja 
-          joukkuepeliryhmiä. <!-- Lähde: https://www.oulu.fi/fi/hae/tutustu-oulun-yliopistoon/opiskelijan-oulu -->
-        </div>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="headingThree">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          <strong>Oulu - Euroopan kulttuuripääkaupunki 2026</strong>
-        </button>
-      </h2>
-      <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-        </div>
-      </div>
+<div class="accordion-item">
+  <h2 class="accordion-header" id="headingOne">
+    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+      <strong>Oulun historia</strong>
+    </button>
+  </h2>
+  <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+    <div class="accordion-body">
+      Ruotsin kuninkaan Kaarle IX:n vuonna 1605 perustama Oulu on Pohjois-Suomen vanhin kaupunki. Oulun suosio alkoi kasvaa jo 1760-luvulla, kun kaupunki sai tapulikaupunkioikeudet, jotka mahdollistivat 
+      ulkomaankaupan.<br>
+      Oulu tunnettiin pitkään tervakaupunkina: 1800-luvulla Oulu oli koko vuosisadan suurin tervanviejä Suomessa.<br>
+      Oulu tunnetaan nykypäivänä teknologiakaupunkina. Vuonna 1982 Ouluun perustettiin Pohjoismaiden ensimmäinen teknologiakylä, Technopolis.
+    </div> <!-- Lähde: https://fi.wikipedia.org/wiki/Oulu -->
+  </div>
+</div>
+<div class="accordion-item">
+  <h2 class="accordion-header" id="headingTwo">
+    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+      <strong>Oulu opiskelijakaupunkina</strong>
+    </button>
+  </h2>
+  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+    <div class="accordion-body">
+      Oulussa on reilusti tekemistä tarjolla opiskelijoille. Oulu on myös Suomen edullisin opiskelija-asumisen kannalta. Oulun korkeakoululiikunta tarjoaa erilaisia kursseja ja esimerkiksi palloilu- ja 
+      joukkuepeliryhmiä. <!-- Lähde: https://www.oulu.fi/fi/hae/tutustu-oulun-yliopistoon/opiskelijan-oulu -->
     </div>
   </div>
-
- 
+</div>
 </header>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-  <script src="main.js"></script>
-</body>
-
 <footer class="page-footer">
   <div class="footerText">
     <p>Liisa Pikkarainen</p>
   </div>
 </footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<script src="main.js"></script>
+
+</body>
 </html>
