--- a/Bootstrap_Website_UUSI/index.html
+++ b/Bootstrap_Website_UUSI/index.html
@@ -29,18 +29,18 @@
 
 <!-- Pudotusvalikon sisältö -->
 <div class="collapse navbar-collapse" id="main-navigation">
-    <ul class="navbar-nav">
-        <li class="nav-item">
-          <a href="Oulu.html" class="nav-link" href="#" button class="">Oulu</a>
-        </li>
-        <li class="nav-item">
-          <a href="Kuopio.html" class="nav-link" href="#" button class="">Kuopio</a>
+  <ul class="navbar-nav">
+      <li class="nav-item">
+        <a href="Oulu.html" class="nav-link" href="#" button class="">Oulu</a>
       </li>
-    </ul>
+      <li class="nav-item">
+        <a href="Kuopio.html" class="nav-link" href="#" button class="">Kuopio</a>
+    </li>
+  </ul>
 </div>
 
 <!-- Tervetuloa -teksti -->
-<body>
+<body class="body">
 <header class="header">
   <div class="overlay"></div>
   <div class="description">
@@ -56,38 +56,37 @@
 <br>
 
 <!-- Placeholder -->  
-  <div style="min-height: 120px;">
-    <div class="collapse collapse-horizontal" id="collapseWidthBar">
-      <div class="card card-body" style="width: 1300px;">
-        Löydät sivun yläreunasta valikon, josta näet molempien kaupunkien sivut.
-      </div>
+<div style="min-height: 120px;">
+  <div class="collapse collapse-horizontal" id="collapseWidthBar">
+    <div class="card card-body" style="width: 1300px;">
+      Löydät sivun yläreunasta valikon, josta näet molempien kaupunkien sivut.
     </div>
   </div>
+</div>
 
 <!-- Kaupunkien nimet ja niiden kuvat -->       
 <div class="container-features">
 <div class="row">
 <div class="col-lg-6 col-md-4 col-sm-12">
-    <h3 class="feature-title">Oulu</h3>
-    <img src="images/column-1.jpg" class="img-fluid">
-    <p>"Capital of Northern Scandinavia"</p></div>
+  <h3 class="feature-title">Oulu</h3>
+  <img src="images/column-1.jpg" class="img-fluid">
+  <p>"Capital of Northern Scandinavia"</p></div>
 
-    <div class="col-lg-6 col-md-4 col-sm-12">
-    <h3 class="feature-title">Kuopio</h3>
-    <img src="images/column-2.jpg" class="img-fluid">
-    <p>"Mualiman Napa"</p></div>
-  </header>
-  
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-  <script src="main.js"></script>
+  <div class="col-lg-6 col-md-4 col-sm-12">
+  <h3 class="feature-title">Kuopio</h3>
+  <img src="images/column-2.jpg" class="img-fluid">
+  <p>"Mualiman Napa"</p></div>
+</header>
 
-  <footer class="page-footer">
-    <div class="footerText">
-      <p>Liisa Pikkarainen</p>
-    </div>
-  </footer>
+<footer class="page-footer">
+  <div class="footerText">
+    <p>Liisa Pikkarainen</p>
+  </div>
+</footer>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<script src="main.js"></script>
 </body>
 </html>
