--- a/Bootstrap_Website_UUSI/Oulu.html
+++ b/Bootstrap_Website_UUSI/Oulu.html
@@ -45,7 +45,7 @@
   <div class="row">
   <div class="col-lg-6 col-md-4 col-sm-12">
     <h3 class="feature-title">Rotuaari</h3>
-    <img src="images/oulu-page-picture1.jpg" class="img-fluid">    <!-- Lähde: https://commons.wikimedia.org/wiki/File:Kirkkokatu_Oulu_20121206_01.JPG -->
+    <img src="../Bootstrap_Website_UUSI/images/oulu-page-picture1.jpg" class="img-fluid">    <!-- Lähde: https://commons.wikimedia.org/wiki/File:Kirkkokatu_Oulu_20121206_01.JPG -->
     <p>Rotuaari</p></div>
 
     <div class="col-lg-6 col-md-4 col-sm-12">
