--- a/Bootstrap_Website_UUSI/Oulu.html
+++ b/Bootstrap_Website_UUSI/Oulu.html
@@ -50,7 +50,7 @@
 
     <div class="col-lg-6 col-md-4 col-sm-12">
     <h3 class="feature-title">Oulun tuomiokirkko</h3>
-    <img src="images/oulu-page-picture2.jpg" class="img-fluid">     <!-- Lähde: https://commons.wikimedia.org/wiki/File:Oulu_Cathedral_2020-07-03.jpg -->
+    <img src="../Bootstrap_Website_UUSI/images/oulu-page-picture2.jpg" class="img-fluid">     <!-- Lähde: https://commons.wikimedia.org/wiki/File:Oulu_Cathedral_2020-07-03.jpg -->
     <p>Oulun tuomiokirkko</p>
   </div>
 
