--- a/Bootstrap_Website_UUSI/index.html
+++ b/Bootstrap_Website_UUSI/index.html
@@ -69,12 +69,12 @@
 <div class="row">
 <div class="col-lg-6 col-md-4 col-sm-12">
   <h3 class="feature-title">Oulu</h3>
-  <img src="images/column-1.jpg" class="img-fluid">
+  <img src="./images/column-1.JPG" class="img-fluid">
   <p>"Capital of Northern Scandinavia"</p></div>
 
   <div class="col-lg-6 col-md-4 col-sm-12">
   <h3 class="feature-title">Kuopio</h3>
-  <img src="images/column-2.jpg" class="img-fluid">
+  <img src="./images/column-2.JPG" class="img-fluid">
   <p>"Mualiman Napa"</p></div>
 </header>
 
