REST palvelu lisätty

--- a/Javascript_oppimistehtävä/index.html
+++ b/Javascript_oppimistehtävä/index.html
@@ -26,6 +26,13 @@
                 <button type="button"><span></span>DONATE</button>
             </div>
         </div>
-    </div>
+        <div class="joke">
+            <h1>Animal Joke of The Day</h1>
+            <div id="joke"></div>
+            <div id="copyright"></div>
+            <img id="answer-image" />
+            <script src="code.js"></script>
+        </div>
+    </div>  
 </body>
 </html>
